Make chrome menu border opaque to avoid border bleed

--- a/gtk/src/light/gtk-3.0/_apps.scss
+++ b/gtk/src/light/gtk-3.0/_apps.scss
@@ -533,6 +533,13 @@ headerbar button image ~ window decoration ~ menu separator {
   }
 }
 
+/*********************	
+ * Chrome / Chromium *	
+ *********************/	
+ window.background.chromium {	
+  menu { border: 1px solid $inkstone; }
+ }
+
 normal-button {
   @include button(normal);
 
